Added 'ArtistCard' component as a container with an artist's details. Updated the 'Artists' component to show a row or 'ArtistCard' items. Fixed stateToProps mapping, as well: added correct property to  fetch from for 'ArtistsReducer' and also removed the default state that was being passed to the buildStore method. Added CSS to generate equal-width panels on a row, to show items in a grid-way.

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,3 +1,12 @@
 body {
   padding-top: 70px;
 }
+
+.equal, .equal > div[class*='col-'] {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex:1 1 auto;
+}
